--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-av": "13.4.1",
     "expo-file-system": "^15.6.0",
     "expo-status-bar": "~1.6.0",
+    "jotai": "^2.5.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
